# GuardiansOfDongne

./: .gitignore  README.md  package-lock.json
00_lee/: README.md  index.html  package-lock.json  package.json
00_lee/lee_agent/: pyproject.toml
00_lee/lee_agent/src/: agent_main.py  pose_extractor.py  rtsp_reader.py  sender_http.py  window_builder.py
00_lee/rtsp-node/: index.js  package.json
00_lee/src/: App.tsx
00_lee/src/components/: HlsPlayer.tsx  MainVideoPlayer.tsx  RightPanel.tsx  StreamVideo.tsx.tsx  VideoGrid.tsx
00_lee/src/pages/: LiveVideoPlayer.tsx
LSTM_model/anomaly_cls/: inference_cls.py  train_cls.py
LSTM_model/anomaly_det/: inference_det.py  train_detection_v2.py
agent/: .env.example  README.md  agent_app.py  pyproject.toml
agent/config/: cameras.json.example
agent/hls/cam01/: index.m3u8  index24.ts  index25.ts  index26.ts  index27.ts  index28.ts  index29.ts
agent/hls/cam02/: index.m3u8
core/python/: pyproject.toml
model_Choi/model_1/: b_train_lstm_01.py  lstm_model_1_loss.csv
modeling/: device.py  pyproject.toml
modeling/src/modeling/: schemas.py
server/: .env.example  README.md  behavior_inference_server.py  pyproject.toml  reset_db.py
service_url/: README.md
ui_no_streaming/: package.json
ui_no_streaming/src/: App.tsx  index.css  metadata.json
ui_no_streaming/src/components/: MainVideoPlayer.tsx  RightPanel.tsx  VideoControls.tsx  VideoGrid.tsx
ui_streaming/: .env.local  package-lock.json  package.json
ui_streaming/src/: App.tsx  index.css
ui_streaming/src/components/: Header.tsx  MainVideoPlayer.tsx  RightPanel.tsx  RightPanelPixed.tsx  Sidebar.tsx  VideoGrid.tsx
ui_streaming/src/hooks/: useMjpegStream.ts  (+1 more)
(+9 files in other folders)
