[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "numpy>=2.3.5",
    "modeling",
    "psycopg2-binary>=2.9.11",
    "project-core",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "torch>=2.9.1",
]

[tool.uv.sources]
project-core = { path = "../core/python" }
modeling = { path = "../modeling" }
