
[project]
name = "frontend-agent"
version = "0.1.0"
description = "RTSP → Mediapipe → Behavior backend connector"
requires-python = ">=3.12"
dependencies = [
    "opencv-python",
    "mediapipe",
    "numpy",
    "requests",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
